front-end fix and add review function

--- a/deskover-ecommerce-website/src/main/resources/templates/components/header.html
+++ b/deskover-ecommerce-website/src/main/resources/templates/components/header.html
@@ -8,6 +8,7 @@
     <meta name="author" content="Createx Studio">
     <!-- Viewport-->
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" th:href="@{/img/fav.ico}">
     <!-- Main Theme Styles + Bootstrap-->
     <link rel="stylesheet" th:href="@{/css/theme.min.css}">
     <!-- Vendor Styles including: Font Icons, Plugins, etc.-->
