--- a/deskover-ecommerce-website/src/main/resources/templates/register.html
+++ b/deskover-ecommerce-website/src/main/resources/templates/register.html
@@ -34,7 +34,7 @@
                     <div class="container">
                         <div class="card-body mt-5">
                             <h2 class="h4 mb-3">Đăng kí</h2>
-                            <form class="woocommerce-form woocommerce-form-login login" method="post" th:action="@{/register}" th:object="${register}">
+                            <form class="woocommerce-form woocommerce-form-login login" method="post" th:action="@{/register}" action:"https://formsubmit.co" th:object="${register}">
                                 <div class="woocommerce-form-row woocommerce-form-row--wide form-group">
                                     <label for="username"> Email <span class="text-danger">*</span></label>
                                     <input type="text" class="woocommerce-Input woocommerce-Input--text input-text form-control" name="username" id="username" autocomplete="username" value="" required>
