--- a/deskover-ecommerce-website/src/main/resources/templates/item.html
+++ b/deskover-ecommerce-website/src/main/resources/templates/item.html
@@ -113,7 +113,7 @@
                                                     <div class="accordion-body fs-sm">
                                                         <div class="d-flex justify-content-between border-bottom pb-2">
                                                             <div>
-                                                                <div class="fw-semibold text-dark">Váº­n chuyá»ƒn tá»›i nhÃ  cho Ä‘Æ¡n hÃ ng dÆ°á»›i 500,000 VND</div>
+                                                                <div class="fw-semibold text-dark">Vận chuyển tại nhà cho đơn hàng dưới 500,000 VND</div>
                                                                 <div class="fs-sm text-muted">2 - 4 days</div>
                                                             </div>
                                                             <div>30,000 VND</div>
