--- a/deskover-ecommerce-website/src/main/resources/templates/register.html
+++ b/deskover-ecommerce-website/src/main/resources/templates/register.html
@@ -35,20 +35,19 @@
                     <div class="container">
                         <div class="card-body mt-5">
                             <h2 class="h4 mb-3">Đăng kí</h2>
-
                             <form class="woocommerce-form woocommerce-form-login login" method="post" th:action="@{/register}" th:object="${register}">
                                 <div class="woocommerce-form-row woocommerce-form-row--wide form-group">
                                     <label for="username"> Email <span class="text-danger">*</span></label>
-                                    <input type="text" class="woocommerce-Input woocommerce-Input--text input-text form-control" name="username" id="username" autocomplete="username" value="">
+                                    <input type="text" class="woocommerce-Input woocommerce-Input--text input-text form-control" name="username" id="username" autocomplete="username" value="" required>
                                 </div>
                                 <div class="woocommerce-form-row woocommerce-form-row--wide form-group">
                                     <label for="username"> Họ và tên <span class="text-danger">*</span></label>
-                                    <input type="text" class="woocommerce-Input woocommerce-Input--text input-text form-control" name="fullname" id="username" autocomplete="username" value="">
+                                    <input type="text" class="woocommerce-Input woocommerce-Input--text input-text form-control" name="fullname" id="username" autocomplete="username" value="" required>
                                 </div>
                                 <div class="woocommerce-form-row woocommerce-form-row--wide form-group mt-4">
                                     <label for="password">Mật khẩu<span class="text-danger">*</span></label>
                                     <div class="password-toggle">
-                                        <span class="password-input"><input class="woocommerce-Input woocommerce-Input--text input-text form-control" type="password" name="password" id="password" autocomplete="current-password"><span class="show-password-input"></span></span>
+                                        <span class="password-input"><input class="woocommerce-Input woocommerce-Input--text input-text form-control" type="password" name="password" id="password" autocomplete="current-password" required><span class="show-password-input" ></span></span>
                                         <label class="password-toggle-btn">
                                             <input class="custom-control-input" type="checkbox" hidden>
                                             <i class="czi-eye password-toggle-indicator"></i>
@@ -59,7 +58,7 @@
                                 <div class="woocommerce-form-row woocommerce-form-row--wide form-group mt-4">
                                     <label for="password"> Nhập lại mật khẩu<span class="text-danger">*</span></label>
                                     <div class="password-toggle">
-                                        <span class="password-input"><input class="woocommerce-Input woocommerce-Input--text input-text form-control" type="password" name="confirmPassword" id="password" autocomplete="current-password"><span class="show-password-input"></span></span>
+                                        <span class="password-input"><input class="woocommerce-Input woocommerce-Input--text input-text form-control" type="password" name="confirmPassword" id="password" autocomplete="current-password" required><span class="show-password-input"></span></span>
                                         <label class="password-toggle-btn">
                                             <input class="custom-control-input" type="checkbox" hidden>
                                             <i class="czi-eye password-toggle-indicator"></i>
@@ -68,16 +67,14 @@
                                     </div>
                                 </div>
                                 
-
                                 <hr class="mt-4">
                                 <div class="text-right pt-4">
-                                    <button type="submit" class="woocommerce-button button woocommerce-form-login__submit btn btn-primary w-100 fw-bold" name="login" value="Log in"><i class="czi-sign-in mr-2 ml-n21"></i>ĐĂNG NHẬP</button>
+                                    <button type="submit" class="woocommerce-button button woocommerce-form-login__submit btn btn-primary w-100 fw-bold" name="login" value="Log in"><i class="czi-sign-in mr-2 ml-n21"></i>ĐĂNG KÍ</button>
                                 </div>
                                 <div class="text-right pt-4">
-                                    <button class="woocommerce-button button woocommerce-form-login__submit btn btn-outline-primary w-100 fw-bold" name="login" value="Log in">
-                                        <img width="20px" style="margin-bottom:3px; margin-right:5px" alt="Google sign-in" src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/53/Google_%22G%22_Logo.svg/512px-Google_%22G%22_Logo.svg.png" />
-                                        ĐĂNG NHẬP BẰNG GOOGLE
-                                    </button>
+                                	<div class="w-50 pe-3"><a class="btn btn-secondary d-block w-100" href="/login"><i class="ci-arrow-left mt-sm-0 me-1"></i><span class="d-none d-sm-inline">Back to Login</span><span class="d-inline d-sm-none">Back</span></a></div>
+                                
+             
                                 </div>
 
                                 <input type="hidden" id="woocommerce-login-nonce" name="woocommerce-login-nonce" value="28b512fbc5"><input type="hidden" name="_wp_http_referer" value="/cartzilla/my-account/downloads/">
